パーツカテゴリの番号別Dir対応完了

--- a/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/RECORDS.HTML
@@ -23,6 +23,7 @@
                     </div>
                     <input type="hidden" name="CATEGORY_%2_HIDDEN" id="CATEGORY_%2_HIDDEN" value="%4" class="form-control" />
                     <input type="hidden" name="CATEGORY_NO_%2_HIDDEN" id="CATEGORY_NO_%2_HIDDEN" value="%3" class="form-control" />
+                    <input type="hidden" name="CATEGORY_NO_%2_HIDDEN_EX" id="CATEGORY_NO_%2_HIDDEN_EX" value="%3" class="form-control" />
                 </div>
             </div>
         </div>
