--- a/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
+++ b/APPLI/PARTS_LIST/LISTS/HTML/TABLE.HTML
@@ -55,7 +55,7 @@
                 <input type="number" id="NEW_PARTS_PRICE" name="NEW_PARTS_PRICE" value="" class="form-control input-sm" style="" placeholder="税抜価格" >
             </td>
              <td>
-                <input type="number" id="NEW_PARTS_REMARKS" name="NEW_PARTS_REMARKS" value="" class="form-control input-sm" style="" placeholder="備考" >
+                <input type="text" id="NEW_PARTS_REMARKS" name="NEW_PARTS_REMARKS" value="" class="form-control input-sm" style="" placeholder="備考" >
             </td>           
             <td>
                 <a href="" class="btn btn-primary btn-sm" onclick="newParts(); return false;">NEW</a>
