--- a/APPLI/PARTS_LIST/SEARCH/HTML/DROPDOWN_LIST.HTML
+++ b/APPLI/PARTS_LIST/SEARCH/HTML/DROPDOWN_LIST.HTML
@@ -1,5 +1,7 @@
 <!--PARTS SEARCH RESULT DROPDOWN LISTS Records-->
 
 <!--RECORDS-->
-    <li class="list-parts" value="%1"><a>%2 %3 %4</a></li>
+    <li class="list-parts" value="%1"><a>%4</a></li>
+    <input type="hidden" id="PARTS_NEW_NM_%1" value="%4">
+    <input type="hidden" id="PARTS_NEW_PRICE_%1" value="%6">
 <!--RECORDS-->
