--- a/HTML/SIDE.HTML
+++ b/HTML/SIDE.HTML
@@ -81,10 +81,10 @@
                         <span style="font-color:blue;"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        <a href="">
+                        <a href="/APP/OPERATION_CATEGORY/LISTS/SHOW">
                             <i class="glyphicon glyphicon-wrench"> 作業カテゴリ</i>
                         </a>
-    			        <a href="">
+    			        <a href="/APP/OPERATION_LIST/LISTS/SHOW">
                             <i class="glyphicon glyphicon-wrench"> 作業一覧</i>
                         </a>
     			        <a href="/APP/PARTS_CATEGORY/LISTS/SHOW">
